Fix native select caret alignment (#3539)
Switching icons to the boxless variants broke the carets 🙈  this fixes them up to be centred in their boxes again

--- a/src/sass/7-components/_forms.selects.scss
+++ b/src/sass/7-components/_forms.selects.scss
@@ -19,6 +19,8 @@
 	~ .#{$ns}-select--caret {
 		align-items: center;
 		bottom: 0;
+		display: flex;
+		justify-content: center;
 		margin: $xui-s-xsmall $xui-s-xsmall $xui-s-xsmall 0;
 		pointer-events: none;
 		position: absolute;
